Add functions control plane read APIs
